# casuya-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  alembic.ini  list_lessons.py  package.json  pyproject.toml  requirements.txt  reseed.bat  run.ps1  serve.js  serve_static.py.bak  start.py  test_body.json  test_both_lessons.py  test_katex_logic.py  test_katex_logic_fixed.py  test_katex_logic_simple.py
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  release.yml  tests.yml
backend/: main.py
backend/api/: ai.py  analytics.py  auth.py  bookmarks.py  branding.py  games.py  lessons.py  math.py  note.py  notifications.py  oauth.py  payments.py  progress.py  quizzes.py  search.py  students.py  subjects.py  subtopics.py  teachers.py  topics.py  uploads.py  users.py
backend/config/: database.py  jobs.py  logging.py  redis.py  security.py  settings.py
backend/integrations/: casuya_bridge.js  casuya_core.py
backend/middleware/: auth.py  cache.py  cors.py  errors.py  permissions.py  rate_limit.py  sanitizer.py  security_headers.py  sentry.py
backend/models/: analytics.py  audit_log.py  (+15 more)
docker/: Dockerfile  docker-compose.yml
frontend/: contact.html  forgot-password.html  help.html  index.html  login  login.html  privacy.html  register  register.html  reset-password.html  terms.html
integrations/: africastalking.py  azampay.py  casuya_bridge.js  casuya_bridge.py  casuya_core.py  casuya_runtime.py  cloudflare.py  supabase.py
scripts/: setup_postgres.sh
tasks/: indexeddb_backup.js
tests/: conftest.py
(+114 files in other folders)
